更新yml中路径错误问题

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -27,12 +27,12 @@ jobs:
 
       - name: Build Sphinx HTML
         run: |
-          sphinx-build -b html docs docs/_build/html
+          sphinx-build -b html docs/source docs/source/_build/html
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_build/html
+          path: docs/source/_build/html
 
   deploy:
     needs: build
